// Modules/benefits-admin/Protos/benefits.proto
syntax = "proto3";

option csharp_namespace = "BenefitsAdministration.Protos";

package benefits;

service BenefitsService {
  // Calculate benefits for a claim
  rpc CalculateBenefits (BenefitCalculationRequest) returns (BenefitCalculationResponse);
  
  // Get tax withholding rate
  rpc GetTaxWithholdingRate (TaxRateRequest) returns (TaxRateResponse);
  
  // Update tax withholding rate
  rpc UpdateTaxWithholdingRate (UpdateTaxRateRequest) returns (TaxRateResponse);
}

// Employment history for benefit calculation
message Employment {
  string employer_id = 1;
  double wage_rate = 2;
  string pay_frequency = 3;
  int32 hours_per_week = 4;
  string start_date = 5;
  string end_date = 6;
}

// Benefit calculation request
message BenefitCalculationRequest {
  string claim_id = 1;
  string claimant_id = 2;
  repeated Employment employment_history = 3;
}

// Benefit year
message BenefitYear {
  string start_date = 1;
  string end_date = 2;
}

// Benefit calculation response
message BenefitCalculationResponse {
  string claim_id = 1;
  double weekly_benefit_amount = 2;
  double maximum_benefit_amount = 3;
  BenefitYear benefit_year = 4;
  double tax_withholding_rate = 5;
  double net_weekly_benefit_amount = 6;
}

// Tax rate request
message TaxRateRequest {
  string state_code = 1;
}

// Tax rate response
message TaxRateResponse {
  double tax_withholding_rate = 1;
}

// Update tax rate request
message UpdateTaxRateRequest {
  string state_code = 1;
  double tax_withholding_rate = 2;
}
