syntax = "proto3";

package payment;

option go_package = "./proto";

// Payment Service for unemployment claim processing
service PaymentService {
  // Service registration with Camel Gateway
  rpc RegisterService(RegisterRequest) returns (RegisterResponse);
  
  // Heartbeat to maintain connection
  rpc SendHeartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // Get claims by status from Camel Gateway
  rpc GetClaimsByStatus(StatusRequest) returns (ClaimsResponse);
  
  // Update claim status and payment info back to Camel
  rpc UpdateClaimPayment(PaymentUpdateRequest) returns (PaymentUpdateResponse);
}

// Service Registration Messages
message RegisterRequest {
  string service_id = 1;
  string name = 2;
  string technology = 3;
  string protocol = 4;
  string endpoint = 5;
  string health_endpoint = 6;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

// Heartbeat Messages
message HeartbeatRequest {
  string service_id = 1;
  string timestamp = 2;
  string status = 3;
}

message HeartbeatResponse {
  bool success = 1;
  string message = 2;
}

// Claims Query Messages
message StatusRequest {
  string status = 1;
}

message Claim {
  string claim_reference_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email_address = 4;
  string phone_number = 5;
  string employer_name = 6;
  string employer_id = 7;
  string employment_start_date = 8;
  string employment_end_date = 9;
  double total_annual_earnings = 10;
  string separation_reason_code = 11;
  string separation_explanation = 12;
  string status_code = 13;
  string received_timestamp = 14;
  double state_tax_amount = 15;
  double federal_tax_amount = 16;
  double total_tax_amount = 17;
}

message ClaimsResponse {
  repeated Claim claims = 1;
  bool success = 2;
  string message = 3;
}

// Payment Update Messages
message PaymentUpdateRequest {
  string claim_id = 1;
  string status = 2;
  double weekly_benefit_amount = 3;
  double maximum_benefit = 4;
  double first_payment_amount = 5;
  string updated_by = 6;
  string notes = 7;
}

message PaymentUpdateResponse {
  bool success = 1;
  string message = 2;
}